# claude-swarm

./: .gitignore  Cargo.toml  README.md  swarm.toml  swarm.toml.example
docs/: index.html
docs/assets/css/: style.css
src/: health.rs  lib.rs  main.rs  telegram.rs
src/agent/: handle.rs  mod.rs  pool.rs  stream_parser.rs  subprocess.rs
src/config/: cli_args.rs  mod.rs  settings.rs  swarm_config.rs
src/orchestrator/: actor.rs  mod.rs  registry.rs  router.rs  scheduler.rs  team_task.rs
src/tui/: app.rs  event_handler.rs  i18n.rs  layout.rs  mod.rs  terminal.rs  theme.rs
src/tui/views/: agent_detail.rs  dashboard.rs  log_view.rs  mod.rs  office_view.rs  performance_view.rs  settings_view.rs  task_view.rs
src/tui/widgets/: agent_list.rs  agent_panel.rs  command_input.rs  header_bar.rs  help_overlay.rs  message_log.rs  mod.rs  status_bar.rs  task_table.rs
src/types/: agent.rs  communication.rs  event.rs  log_entry.rs  message.rs  mod.rs  task.rs
src/util/: ring_buffer.rs
tests/: orchestrator_test.rs  stream_parser_test.rs
tests/fixtures/: sample_stream.ndjson
