[package]
name = "claude-swarm"
version = "0.1.0"
edition = "2021"
description = "Terminal multi-agent Claude orchestrator with TUI dashboard"
license = "MIT"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
which = "7"
ulid = "1"
unicode-width = "0.2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
shell-escape = "0.1"
axum = "0.7"
dirs = "6"
teloxide = { version = "0.13", default-features = false, features = ["rustls", "ctrlc_handler"] }
rand = "0.8"
sysinfo = "0.30"
